# generative-ai-repo

./: .env  README.md  function_class.py  loop_class.py  oops.py  package-lock.json  package.json  practice.ipynb
app/: page.tsx
backend/: .env  app.py  main.py  pyproject.toml
backend/crew/: during_surgery_crew.py
backend/helper_functions/: embeddings.py  pinecone_vectore_store.py
datascience-crashcourse/: datascience-crashcourse.ipynb  datascience.ipynb
frontend/: .env  package-lock.json  package.json
frontend/actions/: surgeon-query.ts
frontend/app/: page.tsx
frontend/app/api/generate/: route.ts
frontend/app/components/: patient-history.tsx  recorder.tsx  voice-input.tsx
frontend/types/: global.d.ts
machine-learning/: course.ipynb
panaverse-gen-ai/01-chatgpt/: main.ipynb
panaverse-gen-ai/01-chatgpt/assistant_api/example/: main.py
panaverse-gen-ai/01-chatgpt/assistant_api/personal_trainer/: main.py
panaverse-gen-ai/02-requests/: main.ipynb
panaverse-gen-ai/03-pydantic/: code.ipynb  simple_example.py
panaverse-gen-ai/04-serverless-postgres/: main.ipynb  socialDB.db
panaverse-gen-ai/06-docstring/: code.ipynb
panaverse-gen-ai/07-fast-api/: body.py  code.ipynb  f1.py  f2.py  header.py  header_return.py  hello.py  hello_1.py
panaverse-gen-ai/mini-programs/coding-shakespeare/: main.py
python-crashcourse/: error-and-file-handling.py  mutable_and_immutable_and_value_references.py  oops.py  practice.ipynb  python_crash_course.ipynb
src/app/(root)/: layout.tsx
src/app/(root)/(routes)/: page.tsx
(+2 files in other folders)
